--- a/Bank_Churn_Data.ipynb
+++ b/Bank_Churn_Data.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "9ed77c28-0503-4ff7-8ffe-5b72e7aea464",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "f7186a53-4572-4a88-b136-133de753ce73",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "f7f647a3-3162-478c-865c-808b6260ad6f",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
+   "id": "cd995d55-b5de-495d-96d8-99bb3b1e2e5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CustomerId         0\n",
+       "Surname            0\n",
+       "CreditScore        0\n",
+       "Geography          0\n",
+       "Gender             0\n",
+       "Age                0\n",
+       "Tenure_x           0\n",
+       "EstimatedSalary    0\n",
+       "Balance            0\n",
+       "NumOfProducts      0\n",
+       "HasCrCard          0\n",
+       "Tenure_y           0\n",
+       "IsActiveMember     0\n",
+       "Exited             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "6c58c42a-887e-43f8-95ff-06620b7aadf7",
    "metadata": {},
    "outputs": [],
@@ -443,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "f1413d80-4bd0-4837-a077-80ca97a66c71",
    "metadata": {},
    "outputs": [],
@@ -454,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "5d4f34e4-02b7-4f6d-9f88-875790cbcc2c",
    "metadata": {},
    "outputs": [],
@@ -464,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "20e721f0-2d83-4c84-b469-280bf14f9d1c",
    "metadata": {},
    "outputs": [],
@@ -477,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "4d421ff1-5576-4f5a-b6c9-389de0bf1261",
    "metadata": {},
    "outputs": [
@@ -754,7 +789,7 @@
        "[10000 rows x 14 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "83ca4329-12a2-4385-b616-57703f297c2c",
    "metadata": {},
    "outputs": [],
@@ -776,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "5ebfccc9-1c5d-486a-b433-8516018b9650",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1076,7 @@
        "[10000 rows x 13 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,12 +1087,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "be7e0f8e-d6d5-4d9b-89a6-895ed6c9551c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df.to_csv('Bank_Churn_Data_cleaned')"
+    "merged_df.to_csv('Bank_Churn_Data_cleaned.csv')"
    ]
   },
   {
@@ -1070,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "590baf2a-2912-47b8-b334-bf8848ace9ad",
    "metadata": {},
    "outputs": [],
@@ -1632,12 +1667,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35e8cb49-119f-483f-a45c-2f0d46c85ea8",
+   "cell_type": "markdown",
+   "id": "0065cad1-9415-4020-b1b7-823e900e91a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Result: The majority of the bank's customers have zero balance"
+   ]
   },
   {
    "cell_type": "markdown",
